--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^5.15.10",
     "next": "^14.1.0",
     "react": "^18.2.0",
