--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/lab": "^5.0.0-alpha.166",
     "@mui/material": "^5.15.11",
+    "framer-motion": "^12.6.5",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
